@@ -1,6 +1,7 @@
 <h3>0.13.5</h3>
 <ul>
     <li>#221 Allow showing all build results in the status bar</li>
+    <li>#222 Separate icon for running builds</li>
 </ul>
 <h3>0.13.4</h3>
 <ul>
@@ -61,5 +62,5 @@
     <li>Announcement: Deprecate Jenkins 1 Support</li>
 </ul>
 
-<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.4/README.md">Read Me</a><br/>
-<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.4/CHANGELOG.txt">Changelog</a>
+<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.5/README.md">Read Me</a><br/>
+<a href="https://github.com/MCMicS/jenkins-control-plugin/blob/v0.13.5/CHANGELOG.txt">Changelog</a>
